JUnit 5, Mockito-Fixes
- Dependency upgrades.
- Minor test fixes.

- TODO: Compile for test scope broken, if libs without automatic module
name are involved.